1、修改Eureka Server端口为统一 2、增加JVM调优参数